[package]
name = "tetra-bluestation"
version = "0.2.0"
edition = "2024"

[dependencies]
as-any = "0.3.2"
num = "0.4.3"
num-complex = "0.4.6"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
rustfft = "6.4.0"
soapysdr = "0.4.4"

# By default, we disable the lowest tracing events for performance
# Remove the release_max_level feature to enable all tracing debug levels in release builds
tracing = { version = "0.1.41", features = ["std", "release_max_level_debug"] }
# tracing = { version = "0.1.41", features = ["std"] }

tracing-subscriber = { version = "0.3", features = ["env-filter","time"] }
rand = "0.9.2"
